--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,60 @@
 <!doctype html>
 <html lang="zh-cn">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>源泉</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>源泉</title>
 </head>
 <body>
-<h1>源泉</h1>
+<section class="section section-header">
+  <div class="container">
+    <div class="section-bg section-header-bg"></div>
+    <div class="section-bg section-content-bg"></div>
+    <header class="header">
+      <div class="header-box">
+        <div class="avatar">
+          <img src="/assets/images/logo.png" alt="logo" class="img-responsive">
+        </div>
+        <h1 class="name text-center">王世霖</h1>
+      </div>
+    </header>
+    <div class="section-content">
+      <div class="content-box">
+        <h2>wesley <span class="text-light">wang</span></h2>
+        <div class="description">追求专业与卓越前端开发者</div>
+        <div class="contact">
+          <div class="row">
+            <div class="col-md-3">
+              <div class="item">
+                <h4>Location</h4>
+                <address>上海市徐汇区近龙漕路</address>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <a class="item">
+                <h4>QQ</h4>
+                <div>790313188</div>
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a class="item">
+                <h4>web</h4>
+                <div>http://79px.com</div>
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a class="item">
+                <h4>email</h4>
+                <div>eternityspring@gmail.com</div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<script src="http://localhost:8080/webpack-dev-server.js"></script>
 </body>
 </html>
