--- a/src/index.html
+++ b/src/index.html
@@ -7,54 +7,200 @@
   <title>源泉</title>
 </head>
 <body>
-<section class="section section-header">
-  <div class="container">
+<div class="main-container">
+  <section class="section section-header">
     <div class="section-bg section-header-bg"></div>
     <div class="section-bg section-content-bg"></div>
-    <header class="header">
-      <div class="header-box">
-        <div class="avatar">
-          <img src="/assets/images/logo.png" alt="logo" class="img-responsive">
+    <div class="container">
+      <header class="header">
+        <div class="header-box">
+          <div class="avatar">
+            <img src="/assets/images/logo.png" alt="logo" class="img-responsive">
+          </div>
+          <h1 class="name text-center">王世霖</h1>
         </div>
-        <h1 class="name text-center">王世霖</h1>
-      </div>
-    </header>
-    <div class="section-content">
-      <div class="content-box">
-        <h2>wesley <span class="text-light">wang</span></h2>
-        <div class="description">追求专业与卓越前端开发者</div>
-        <div class="contact">
-          <div class="row">
-            <div class="col-md-3">
-              <div class="item">
-                <h4>Location</h4>
-                <address>上海市徐汇区近龙漕路</address>
+      </header>
+      <div class="section-content">
+        <div class="content-box">
+          <div class="name-slogan">
+            <h2><span class="text-light">wesley</span>&nbsp;<span>wang</span></h2>
+            <div class="description">追求专业与卓越前端开发者</div>
+          </div>
+          <div class="contact">
+            <div class="row">
+              <div class="col-md-6 col-lg-3">
+                <div class="item">
+                  <h4>Location</h4>
+                  <address>上海市徐汇区近龙漕路</address>
+                </div>
               </div>
-            </div>
-            <div class="col-md-3">
-              <a class="item">
-                <h4>QQ</h4>
-                <div>790313188</div>
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a class="item">
-                <h4>web</h4>
-                <div>http://79px.com</div>
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a class="item">
-                <h4>email</h4>
-                <div>eternityspring@gmail.com</div>
-              </a>
+              <div class="col-md-6 col-lg-3">
+                <a class="item">
+                  <h4>QQ</h4>
+                  <div class="info">790313188</div>
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a class="item">
+                  <h4>Eeb</h4>
+                  <div class="info">http://79px.com</div>
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a class="item">
+                  <h4>Email</h4>
+                  <div class="info">eternityspring@gmail.com</div>
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+  <section class="section">
+    <div class="container">
+      <div class="section-bg section-header-bg"></div>
+      <div class="section-bg section-content-bg"></div>
+      <header class="header">
+        <div class="content-box">
+          <h2 class="title">介绍&nbsp;/&nbsp;<small><i>Intro</i></small></h2>
+          <div class="description">介绍一些个人基本情况</div>
+        </div>
+      </header>
+      <div class="section-content">
+        <div class="intro">
+          <p>1992年8月生于湖北·十堰。毕业三年工作四年。为人低调，做事务实踏实。喜欢简单的东西。习惯听歌写代码。</p>
+          <p>性格偏内向。但在熟悉的朋友面前会无话不谈。习惯于有条理的做事说话。</p>
+          <p>没事的时候，喜欢打打dota，下下象棋，写写代码做点小东西。</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="section">
+    <div class="container">
+      <div class="section-bg section-header-bg"></div>
+      <div class="section-bg section-content-bg"></div>
+      <header class="header">
+        <div class="content-box">
+          <h2 class="title">经验&nbsp;/&nbsp;<small><i>Experience</i></small></h2>
+          <div class="description">不同时期简短的从业经历介绍</div>
+        </div>
+      </header>
+      <div class="section-content">
+        <div class="experience">
+          <div class="item">
+            <div class="row">
+              <div class="col-md-5">
+                <div class="time">2012-2013年</div>
+                <div class="title">先后在湖北武汉/十堰工作</div>
+                <div class="description">其中包括1年的实习时间</div>
+              </div>
+              <div class="col-md-7">毕业于武汉软件工程职业技术学院。先后在武汉和老家湖北十堰工作一年。期间，主要精力用于钻研一个基于php的cms：drupal。与此同时，学会了drupal以及wordpress之类的cms的常用操作。</div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="row">
+              <div class="col-md-5">
+                <div class="time">2014年</div>
+                <div class="title">上海传斐信息技术有限公司</div>
+                <div class="description">前端开发</div>
+              </div>
+              <div class="col-md-7">14年年初，来到上海，就职于传斐科技信息有限公司。从事前端开发方面工作。期间，主要精力放在基础的js知识学习。同时也学习了一些产品设计的思维与技巧。</div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="row">
+              <div class="col-md-5">
+                <div class="time">2015年-今</div>
+                <div class="title">上海传斐信息技术有限公司</div>
+                <div class="description">前端开发</div>
+              </div>
+              <div class="col-md-7">15年年初，加入北京云知声信息技术有限公司上海分舵。从事前端开发至今。期间，大部分精力都用户钻研前端的工程化。代码从css转到less，代码管理工具从svn转到git。学习了nodejs，熟悉了gulp。基于gulp做了很多前端自动化构建的工具。同时，也学习和使用了一些前端框架如：angular、vuejs等。</div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="row">
+              <div class="col-md-5">
+                <div class="time">自毕业后</div>
+                <div class="title">个人网站</div>
+                <div class="description">全栈开发的学习与研究</div>
+              </div>
+              <div class="col-md-7">自毕业后一直创建与维护一个个人网站。在学nodejs之前，是基于drupal做的。自己独立开发的主题，广受欢迎。在学习了nodejs后，后端基于nodejs的express框架前端基于google的angularjs框架重做了一遍。全站为单页面应用。历时1年。同时也学会了mongodb的一些常规操作和配置。</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="section">
+    <div class="container">
+      <div class="section-bg section-header-bg"></div>
+      <div class="section-bg section-content-bg"></div>
+      <header class="header">
+        <div class="content-box">
+          <h2 class="title">技能&nbsp;/&nbsp;<small><i>Skills</i></small></h2>
+          <div class="description">我所掌握的工具和技术栈</div>
+        </div>
+      </header>
+      <div class="section-content">
+        <div class="row skill">
+          <div class="col-md-6">
+            <div class="item">
+              <div class="text-info">
+                <span class="num text-light">50%</span>PhotoShop
+              </div>
+              <div class="progress">
+                <div class="progress-bar" style="width: 50%;"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="item">
+              <div class="text-info">
+                <span class="num text-light">50%</span>Css
+              </div>
+              <div class="progress">
+                <div class="progress-bar" style="width: 50%;"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="item">
+              <div class="text-info">
+                <span class="num text-light">50%</span>JavaScript
+              </div>
+              <div class="progress">
+                <div class="progress-bar" style="width: 50%;"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="section">
+    <div class="container">
+      <div class="section-bg section-header-bg"></div>
+      <div class="section-bg section-content-bg"></div>
+      <header class="header">
+        <div class="content-box">
+          <h2 class="title">常逛&nbsp;/&nbsp;<small><i>Usually</i></small></h2>
+          <div class="description">经常逛的技术或者设计相关网站</div>
+        </div>
+      </header>
+      <div class="section-content">
+        <div class="row usually">
+          <div class="col-lg-4 col-md-6">
+            <i class="fa fa-github"></i>
+            <h3>Github</h3>
+            <p>分享一些我的小作品</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
 <script src="http://localhost:8080/webpack-dev-server.js"></script>
 </body>
 </html>
