--- a/src/index.html
+++ b/src/index.html
@@ -192,9 +192,11 @@
       <div class="section-content">
         <div class="row usually">
           <div class="col-lg-4 col-md-6">
-            <i class="fa fa-github"></i>
-            <h3>Github</h3>
-            <p>分享一些我的小作品</p>
+            <div class="item text-center">
+              <i class="fa fa-github"></i>
+              <h3>Github</h3>
+              <p>分享一些我的小作品</p>
+            </div>
           </div>
         </div>
       </div>
