create  resume  json  use vue zepto

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>源泉</title>
 </head>
 <body>
-<div class="main-container">
+<div class="main-container" id="app">
   <section class="section section-header">
     <div class="section-bg section-header-bg"></div>
     <div class="section-bg section-content-bg"></div>
@@ -15,7 +15,7 @@
       <header class="header">
         <div class="header-box">
           <div class="avatar">
-            <img src="/assets/images/logo.png" alt="logo" class="img-responsive">
+            <img src="./assets/images/logo.png" alt="logo" class="img-responsive">
           </div>
           <h1 class="name text-center">王世霖</h1>
         </div>
@@ -26,12 +26,12 @@
             <h2><span class="text-light">wesley</span>&nbsp;<span>wang</span></h2>
             <div class="description">追求专业与卓越前端开发者</div>
           </div>
-          <div class="contact">
+          <div class="contact-info">
             <div class="row">
               <div class="col-md-6 col-lg-3">
                 <div class="item">
                   <h4>Location</h4>
-                  <address>上海市徐汇区近龙漕路</address>
+                  <address>Shanghai·China</address>
                 </div>
               </div>
               <div class="col-md-6 col-lg-3">
@@ -42,7 +42,7 @@
               </div>
               <div class="col-md-6 col-lg-3">
                 <a class="item">
-                  <h4>Eeb</h4>
+                  <h4>Website</h4>
                   <div class="info">http://79px.com</div>
                 </a>
               </div>
@@ -70,7 +70,7 @@
       </header>
       <div class="section-content">
         <div class="intro">
-          <p>1992年8月生于湖北·十堰。毕业三年工作四年。为人低调，做事务实踏实。喜欢简单的东西。习惯听歌写代码。</p>
+          <p><span class="text-light">1992年</span>8月生于<span class="text-light">湖北</span>·十堰。毕业三年工作四年。为人低调，做事务实踏实。喜欢简单的东西。习惯听歌写代码。</p>
           <p>性格偏内向。但在熟悉的朋友面前会无话不谈。习惯于有条理的做事说话。</p>
           <p>没事的时候，喜欢打打dota，下下象棋，写写代码做点小东西。</p>
         </div>
@@ -192,9 +192,30 @@
       <div class="section-content">
         <div class="row usually">
           <div class="col-lg-4 col-md-6">
-            <div class="item text-center">
+            <div class="item">
               <i class="fa fa-github"></i>
-              <h3>Github</h3>
+              <h3 class="text-light">Github</h3>
+              <p>分享一些我的小作品 结交志同道合的朋友</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="item">
+              <i class="fa fa-github"></i>
+              <h3 class="text-light">Github</h3>
+              <p>分享一些我的小作品</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="item">
+              <i class="fa fa-github"></i>
+              <h3 class="text-light">Github</h3>
+              <p>分享一些我的小作品</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="item">
+              <i class="fa fa-github"></i>
+              <h3 class="text-light">Github</h3>
               <p>分享一些我的小作品</p>
             </div>
           </div>
@@ -202,7 +223,48 @@
       </div>
     </div>
   </section>
+  <section class="section">
+    <div class="container">
+      <div class="section-bg section-header-bg"></div>
+      <div class="section-bg section-content-bg"></div>
+      <header class="header">
+        <div class="content-box">
+          <h2 class="title">联系&nbsp;/&nbsp;<small><i>Contact</i></small></h2>
+          <div class="description">通过这些信息可以联系到我</div>
+        </div>
+      </header>
+      <div class="section-content">
+        <div class="contact">
+          <div class="row">
+            <div class="col-md-6 col-lg-3">
+              <div class="item">
+                <h4>Location</h4>
+                <address>Shanghai·China</address>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <a class="item">
+                <h4>QQ</h4>
+                <div class="info">790313188</div>
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <a class="item">
+                <h4>Website</h4>
+                <div class="info">http://79px.com</div>
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <a class="item">
+                <h4>Email</h4>
+                <div class="info">eternityspring@gmail.com</div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
-<script src="http://localhost:8080/webpack-dev-server.js"></script>
 </body>
 </html>
