--- a/src/index.html
+++ b/src/index.html
@@ -5,49 +5,77 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>源泉</title>
+  <style>
+    body{
+      background: #2b2c2c;
+    }
+    .loading{
+      position: fixed;
+      top: 45%;
+      left: 50%;
+    }
+  </style>
 </head>
-<body>
-<div class="main-container" id="app">
+<body id="app">
+<div class="loading" v-show="!loading">
+  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="30px" viewBox="0 0 24 30" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+      <rect x="0" y="10.3333" width="4" height="10.3333" fill="#e0a80d">
+        <animate attributeName="height" attributeType="XML" values="5;21;5" begin="0s" dur="0.6s" repeatCount="indefinite"></animate>
+        <animate attributeName="y" attributeType="XML" values="13; 5; 13" begin="0s" dur="0.6s" repeatCount="indefinite"></animate>
+      </rect>
+      <rect x="10" y="11.6667" width="4" height="7.66667" fill="#e0a80d">
+        <animate attributeName="height" attributeType="XML" values="5;21;5" begin="0.15s" dur="0.6s" repeatCount="indefinite"></animate>
+        <animate attributeName="y" attributeType="XML" values="13; 5; 13" begin="0.15s" dur="0.6s" repeatCount="indefinite"></animate>
+      </rect>
+      <rect x="20" y="7.66667" width="4" height="15.6667" fill="#e0a80d">
+        <animate attributeName="height" attributeType="XML" values="5;21;5" begin="0.3s" dur="0.6s" repeatCount="indefinite"></animate>
+        <animate attributeName="y" attributeType="XML" values="13; 5; 13" begin="0.3s" dur="0.6s" repeatCount="indefinite"></animate>
+      </rect>
+    </svg>
+</div>
+<div class="main-container" v-show="loading" style="display: none;">
   <section class="section section-header">
     <div class="section-bg section-header-bg"></div>
     <div class="section-bg section-content-bg"></div>
     <div class="container">
       <header class="header">
         <div class="header-box">
-          <div class="avatar">
+          <div class="avatar wow inShow">
             <img src="./assets/images/logo.png" alt="logo" class="img-responsive">
           </div>
-          <h1 class="name text-center">{{userInfo.name}}</h1>
+          <h1 class="name text-center wow inShow">{{userInfo.name}}</h1>
         </div>
       </header>
       <div class="section-content">
         <div class="content-box">
           <div class="name-slogan">
-            <h2><span class="text-light">{{userInfo.lastName}}</span>&nbsp;{{userInfo.firstName}}</h2>
-            <div class="description">{{userInfo.slogan}}</div>
+            <h2 class="wow inShow" data-wow-delay="0.1s">
+              <span class="text-light">{{userInfo.lastName}}</span>&nbsp;{{userInfo.firstName}}
+            </h2>
+            <div class="description wow inShow" data-wow-delay="0.15s">{{userInfo.slogan}}</div>
           </div>
           <div class="contact-info">
             <div class="row">
               <div class="col-md-6 col-lg-3">
-                <div class="item">
+                <div class="item wow inShow" data-wow-delay="0.3s">
                   <h4>Location</h4>
                   <address>{{userInfo.location}}</address>
                 </div>
               </div>
               <div class="col-md-6 col-lg-3">
-                <div class="item">
+                <div class="item wow inShow" data-wow-delay="0.45s">
                   <h4>QQ</h4>
                   <div class="info">{{userInfo.qq.number}}</div>
                 </div>
               </div>
               <div class="col-md-6 col-lg-3">
-                <a class="item" href="{{userInfo.website}}" target="_blank">
+                <a class="item wow inShow" data-wow-delay="0.5s" href="{{userInfo.website}}" target="_blank">
                   <h4>Website</h4>
                   <div class="info">{{userInfo.website}}</div>
                 </a>
               </div>
               <div class="col-md-6 col-lg-3">
-                <a class="item" href="mailto:{{userInfo.website}}">
+                <a class="item wow inShow" data-wow-delay="0.55s" href="mailto:{{userInfo.website}}">
                   <h4>Email</h4>
                   <div class="info">{{userInfo.email}}</div>
                 </a>
@@ -119,7 +147,7 @@
                 <span class="num text-light">{{s.percent}}</span>{{s.name}}
               </div>
               <div class="progress">
-                <div class="progress-bar" style="width:{{s.percent}}"></div>
+                <div class="progress-bar wow progressShow" style="width:{{s.percent}}"></div>
               </div>
             </div>
           </div>
@@ -189,11 +217,18 @@
             </div>
           </div>
         </div>
+        <div class="name-slogan">
+          <h2 class="wow inShow" data-wow-delay="0.1s">
+            <span class="text-light">{{userInfo.lastName}}</span>&nbsp;{{userInfo.firstName}}
+          </h2>
+          <div class="description wow inShow" data-wow-delay="0.15s">{{userInfo.slogan}}</div>
+        </div>
       </div>
     </div>
   </section>
 </div>
 <script type="text/javascript" src="./assets/libs/js/zepto.min.js"></script>
 <script type="text/javascript" src="./assets/libs/js/vue.min.js"></script>
+<script type="text/javascript" src="./assets/libs/js/wow.min.js"></script>
 </body>
 </html>
