--- a/src/index.html
+++ b/src/index.html
@@ -218,10 +218,10 @@
           </div>
         </div>
         <div class="name-slogan">
-          <h2 class="wow inShow" data-wow-delay="0.1s">
+          <h2 class="wow inShow">
             <span class="text-light">{{userInfo.lastName}}</span>&nbsp;{{userInfo.firstName}}
           </h2>
-          <div class="description wow inShow" data-wow-delay="0.15s">{{userInfo.slogan}}</div>
+          <div class="description wow inShow" data-wow-delay="0.05s">{{userInfo.slogan}}</div>
         </div>
       </div>
     </div>
