setting print style

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <div class="container">
       <header class="header">
         <div class="header-box">
-          <div class="avatar wow inShow">
+          <div class="avatar wow inShow no-print">
             <img src="./assets/images/logo.png" alt="logo" class="img-responsive">
           </div>
           <h1 class="name text-center wow inShow">{{userInfo.name}}</h1>
@@ -178,7 +178,7 @@
       </div>
     </div>
   </section>
-  <section class="section">
+  <section class="section no-print">
     <div class="container">
       <div class="section-bg section-header-bg"></div>
       <div class="section-bg section-content-bg"></div>
