setting print style  remove log  display nickname

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,8 @@
           <div class="avatar wow inShow no-print">
             <img src="./assets/images/logo.png" alt="logo" class="img-responsive">
           </div>
-          <h1 class="name text-center wow inShow">{{userInfo.name}}</h1>
+          <h1 class="name text-center wow inShow no-print">{{userInfo.nickname}}</h1>
+          <h1 class="name text-center hide show-print-block">{{userInfo.name}}</h1>
         </div>
       </header>
       <div class="section-content">
