--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,11 @@
     </svg>
 </div>
 <div class="main-container" v-show="loading" style="display: none;">
+  <div class="github no-print">
+    <a class="github-button" href="https://github.com/eternityspring/eternityspring.github.io" title="查看源码">
+      <img src="./assets/images/star.svg" alt="Github"><span>Star</span>
+    </a>
+  </div>
   <section class="section section-header">
     <div class="section-bg section-header-bg"></div>
     <div class="section-bg section-content-bg"></div>
