--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,12 @@
       <div class="section-content">
         <div class="row usually">
           <div class="col-lg-4 col-md-6" v-for="u in userInfo.usually">
-            <div class="item" title="{{u.link}}">
+            <a v-if="u.link" href="{{u.link}}" target="_blank" class="item" title="{{u.link}}">
+              <i class="fa fa-github"></i>
+              <h3 class="text-light">{{u.name}}</h3>
+              <p>{{u.description}}</p>
+            </a>
+            <div v-if="!u.link" class="item" title="{{u.link}}">
               <i class="fa fa-github"></i>
               <h3 class="text-light">{{u.name}}</h3>
               <p>{{u.description}}</p>
