部分信息修改完善。

--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
                 <div class="title">{{e.title}}</div>
                 <div class="description">{{e.intro}}</div>
               </div>
-              <div class="col-md-7">{{e.description}}</div>
+              <div class="col-md-7">{{{e.description}}}</div>
             </div>
           </div>
         </div>
