--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>源泉</title>
   <style>
-    body{
+    body {
       background: #2b2c2c;
     }
-    .loading{
+
+    .loading {
       position: fixed;
       top: 45%;
       left: 50%;
@@ -19,19 +20,19 @@
 <body id="app">
 <div class="loading" v-show="!loading">
   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="30px" viewBox="0 0 24 30" style="enable-background:new 0 0 50 50;" xml:space="preserve">
-      <rect x="0" y="10.3333" width="4" height="10.3333" fill="#e0a80d">
-        <animate attributeName="height" attributeType="XML" values="5;21;5" begin="0s" dur="0.6s" repeatCount="indefinite"></animate>
-        <animate attributeName="y" attributeType="XML" values="13; 5; 13" begin="0s" dur="0.6s" repeatCount="indefinite"></animate>
-      </rect>
-      <rect x="10" y="11.6667" width="4" height="7.66667" fill="#e0a80d">
-        <animate attributeName="height" attributeType="XML" values="5;21;5" begin="0.15s" dur="0.6s" repeatCount="indefinite"></animate>
-        <animate attributeName="y" attributeType="XML" values="13; 5; 13" begin="0.15s" dur="0.6s" repeatCount="indefinite"></animate>
-      </rect>
-      <rect x="20" y="7.66667" width="4" height="15.6667" fill="#e0a80d">
-        <animate attributeName="height" attributeType="XML" values="5;21;5" begin="0.3s" dur="0.6s" repeatCount="indefinite"></animate>
-        <animate attributeName="y" attributeType="XML" values="13; 5; 13" begin="0.3s" dur="0.6s" repeatCount="indefinite"></animate>
-      </rect>
-    </svg>
+    <rect x="0" y="10.3333" width="4" height="10.3333" fill="#e0a80d">
+      <animate attributeName="height" attributeType="XML" values="5;21;5" begin="0s" dur="0.6s" repeatCount="indefinite"></animate>
+      <animate attributeName="y" attributeType="XML" values="13; 5; 13" begin="0s" dur="0.6s" repeatCount="indefinite"></animate>
+    </rect>
+    <rect x="10" y="11.6667" width="4" height="7.66667" fill="#e0a80d">
+      <animate attributeName="height" attributeType="XML" values="5;21;5" begin="0.15s" dur="0.6s" repeatCount="indefinite"></animate>
+      <animate attributeName="y" attributeType="XML" values="13; 5; 13" begin="0.15s" dur="0.6s" repeatCount="indefinite"></animate>
+    </rect>
+    <rect x="20" y="7.66667" width="4" height="15.6667" fill="#e0a80d">
+      <animate attributeName="height" attributeType="XML" values="5;21;5" begin="0.3s" dur="0.6s" repeatCount="indefinite"></animate>
+      <animate attributeName="y" attributeType="XML" values="13; 5; 13" begin="0.3s" dur="0.6s" repeatCount="indefinite"></animate>
+    </rect>
+  </svg>
 </div>
 <div class="main-container" v-show="loading" style="display: none;">
   <div class="github no-print">
@@ -98,7 +99,9 @@
       <div class="section-bg section-content-bg"></div>
       <header class="header">
         <div class="content-box">
-          <h2 class="title">介绍&nbsp;/&nbsp;<small><i>Intro</i></small></h2>
+          <h2 class="title">介绍&nbsp;/&nbsp;
+            <small><i>Intro</i></small>
+          </h2>
           <div class="description">介绍一些个人基本情况</div>
         </div>
       </header>
@@ -115,7 +118,9 @@
       <div class="section-bg section-content-bg"></div>
       <header class="header">
         <div class="content-box">
-          <h2 class="title">经验&nbsp;/&nbsp;<small><i>Experience</i></small></h2>
+          <h2 class="title">工作经验&nbsp;/&nbsp;
+            <small><i>Experience</i></small>
+          </h2>
           <div class="description">不同时期简短的从业经历介绍</div>
         </div>
       </header>
@@ -141,7 +146,9 @@
       <div class="section-bg section-content-bg"></div>
       <header class="header">
         <div class="content-box">
-          <h2 class="title">技能&nbsp;/&nbsp;<small><i>Skills</i></small></h2>
+          <h2 class="title">技能&nbsp;/&nbsp;
+            <small><i>Skills</i></small>
+          </h2>
           <div class="description">我所掌握的工具和技术栈</div>
         </div>
       </header>
@@ -167,7 +174,37 @@
       <div class="section-bg section-content-bg"></div>
       <header class="header">
         <div class="content-box">
-          <h2 class="title">常逛&nbsp;/&nbsp;<small><i>Usually</i></small></h2>
+          <h2 class="title">项目经验&nbsp;/&nbsp;
+            <small><i>Experience</i></small>
+          </h2>
+          <div class="description">近期主要做过的一些项目</div>
+        </div>
+      </header>
+      <div class="section-content">
+        <div class="experience">
+          <div class="item" v-for="e in userInfo.project">
+            <div class="row">
+              <div class="col-md-5">
+                <div class="time">{{e.time}}</div>
+                <div class="title">{{e.title}}</div>
+                <div class="description">{{e.intro}}</div>
+              </div>
+              <div class="col-md-7">{{{e.description}}}</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="section">
+    <div class="container">
+      <div class="section-bg section-header-bg"></div>
+      <div class="section-bg section-content-bg"></div>
+      <header class="header">
+        <div class="content-box">
+          <h2 class="title">常逛&nbsp;/&nbsp;
+            <small><i>Usually</i></small>
+          </h2>
           <div class="description">经常逛的技术或者设计相关网站</div>
         </div>
       </header>
@@ -195,7 +232,9 @@
       <div class="section-bg section-content-bg"></div>
       <header class="header">
         <div class="content-box">
-          <h2 class="title">联系&nbsp;/&nbsp;<small><i>Contact</i></small></h2>
+          <h2 class="title">联系&nbsp;/&nbsp;
+            <small><i>Contact</i></small>
+          </h2>
           <div class="description">通过这些信息可以联系到我</div>
         </div>
       </header>
