--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
       <div class="section-content">
         <div class="content-box">
           <div class="name-slogan">
-            <h2 class="wow inShow" data-wow-delay="0.1s">
+            <h2 class="wow inShow no-print" data-wow-delay="0.1s">
               <span class="text-light">{{userInfo.lastName}}</span>&nbsp;{{userInfo.firstName}}
             </h2>
             <div class="description wow inShow" data-wow-delay="0.15s">{{userInfo.slogan}}</div>
@@ -65,26 +65,52 @@
             <div class="row">
               <div class="col-md-6 col-lg-3">
                 <div class="item wow inShow" data-wow-delay="0.3s">
-                  <h4>Location</h4>
-                  <address>{{userInfo.location}}</address>
+                  <h4>性别</h4>
+                  <div class="info">{{userInfo.sex}}</div>
                 </div>
               </div>
               <div class="col-md-6 col-lg-3">
                 <div class="item wow inShow" data-wow-delay="0.45s">
-                  <h4>QQ</h4>
-                  <div class="info">{{userInfo.qq.number}}</div>
+                  <h4>年龄</h4>
+                  <div class="info">{{userInfo.age}}</div>
                 </div>
               </div>
               <div class="col-md-6 col-lg-3">
                 <a class="item wow inShow" data-wow-delay="0.5s" href="{{userInfo.website}}" target="_blank">
-                  <h4>Website</h4>
-                  <div class="info">{{userInfo.website}}</div>
+                  <h4>经验</h4>
+                  <div class="info">{{userInfo.exp}}</div>
                 </a>
               </div>
               <div class="col-md-6 col-lg-3">
                 <a class="item wow inShow" data-wow-delay="0.55s" href="mailto:{{userInfo.website}}">
                   <h4>Email</h4>
                   <div class="info">{{userInfo.email}}</div>
+                </a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6 col-lg-3">
+                <div class="item wow inShow" data-wow-delay="0.6s">
+                  <h4>Location</h4>
+                  <address class="info">{{userInfo.location}}</address>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <div class="item wow inShow" data-wow-delay="0.65s">
+                  <h4>QQ</h4>
+                  <div class="info">{{userInfo.qq.number}}</div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a class="item wow inShow" data-wow-delay="0.7s" href="{{userInfo.website}}" target="_blank">
+                  <h4>Website</h4>
+                  <div class="info">{{userInfo.website}}</div>
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a class="item wow inShow" data-wow-delay="0.75s" href="mailto:{{userInfo.website}}">
+                  <h4>Github</h4>
+                  <div class="info">{{userInfo.github}}</div>
                 </a>
               </div>
             </div>
@@ -244,7 +270,7 @@
             <div class="col-md-6 col-lg-3">
               <div class="item">
                 <h4>Location</h4>
-                <address>{{userInfo.location}}</address>
+                <div class="info">{{userInfo.location}}</div>
               </div>
             </div>
             <div class="col-md-6 col-lg-3">
