--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,8 @@
   </svg>
 </div>
 <div class="main-container" v-show="loading" style="display: none;">
-  <div class="github no-print">
+  <div class="useful-link no-print">
+    <a class="theme-link" href="/index2.html"></a>
     <a class="github-button" href="https://github.com/eternityspring/eternityspring.github.io" title="查看源码">
       <img src="./assets/images/star.svg" alt="Github"><span>Star</span>
     </a>
