--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
                 </a>
               </div>
               <div class="col-md-6 col-lg-3">
-                <a class="item wow inShow" data-wow-delay="0.55s" href="mailto:{{userInfo.website}}">
+                <a class="item wow inShow" data-wow-delay="0.55s" href="mailto:{{userInfo.email}}">
                   <h4>Email</h4>
                   <div class="info">{{userInfo.email}}</div>
                 </a>
@@ -98,7 +98,7 @@
                 </a>
               </div>
               <div class="col-md-6 col-lg-3">
-                <a class="item wow inShow" data-wow-delay="0.75s" href="mailto:{{userInfo.website}}">
+                <a class="item wow inShow" data-wow-delay="0.75s" href="{{userInfo.github}}" target="_blank">
                   <h4>Github</h4>
                   <div class="info">{{userInfo.github}}</div>
                 </a>
