--- a/src/index.html
+++ b/src/index.html
@@ -276,7 +276,7 @@
               </a>
             </div>
             <div class="col-md-6 col-lg-3">
-              <a class="item" href="mailto:{{userInfo.website}}">
+              <a class="item" href="mailto:{{userInfo.email}}">
                 <h4>Email</h4>
                 <div class="info">{{userInfo.email}}</div>
               </a>
