--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <title>源泉-追求专业与卓越的前端开发者</title>
   </head>
   <body>
-    <noscript>
+<!--    <noscript>
       <strong>We're sorry but resume doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    </noscript>-->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
