--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>源泉-追求专业与卓越的前端开发者</title>
+    <title>源泉-互联网从业者</title>
   </head>
   <body>
 <!--    <noscript>
